
+---------------------------+
| KNOWN BUGS                |
+---------------------------+

	* crytical warning when unloading the plugin


+---------------------------+
| TODO                      |
+---------------------------+

	(DONE) codestyle improve to be same as other parts as geany`s
	(DONE) configuration dialog
	(DONE) tracking path to current focused document (currently now roking on Windows)
	* Better tracking for files, open path to them
	* In windows can choice between devices (C:\, D:\,...)
	* Windows compitable
	* Language files
	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* fix possible memory leaks (using g_free... where is need)


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

14-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		strings cleanup


11-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed bug when turned off "On expand refresh"
		fixed runtime crytical warnings reported in http://nopaste.geany.org/p/m3f018a3e
			and thanks to Enrico to help with gdb :)
		added empty element when directory not filled, and changed default option values
			for "On expand refresh"


10-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed wrong root refresh on delete and create when objects are in toplevel
		some string changed in prefs dialog
		added option to close document if it is deleted from treebrowser
		highlighing addressbar if typed directory not exists
		make right click menu dynamic


31-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed saving state of Show the toolbars when starting Geany
		moving settings saving in separated function - save_settings()
		now changing root directory when change current project
		fixed bug when 'Right click->Refresh'

